# InfoWeaver

./: .gitignore  README.md
.github/scripts/: ai_reviewer.py  config.json  exclude_patterns.txt
.github/workflows/: ai-code-review.yml
AI/: .env.example  .gitignore  main.py  pyproject.toml  ruff.toml
AI/api/: __init__.py  chat_routes.py  document_routes.py  search_routes.py
AI/configs/: app_config.py  app_config_test.py
AI/core/: config.py
AI/core/agent/: __init__.py  agentic_rag.py
AI/core/rag/: __init__.py
AI/core/rag/doc_store/: document_store.py
AI/core/rag/embedding/: __init__.py  default_embedding_model.py  oai_compatible_model.py  ollama_model.py  sparse_embedding_model.py
AI/core/rag/extractor/: common_extractor.py
AI/core/rag/retrieval/: search.py
AI/core/rag/splitter/: common_splitter.py  text_spliter.py  text_splitter.py
AI/core/tools/: __init__.py  rag_tools.py
AI/db/: __init__.py  milvus_db.py  milvus_db_test.py  minio_client.py  postgresql_db.py  rabbitmq_client.py  redis_client.py
AI/middlewares/: __init__.py  cors.py
AI/models/: __init__.py  chat.py  document.py  response.py  search.py  tables.py
AI/rag/: embeddings.py  vector_store.py
AI/scripts/: doc_reader.py  doc_uploader.py
AI/services/: document_service.py
AI/tests/: config_script.py  test_config.py
AI/utils/: log.py
server/: .env.example  .gitignore  Dockerfile  README.md  go.mod  go.sum  main.go
server/.github/: copilot-instructions.md
server/api/: enter.go
server/cmd/: main.go
server/config/: constant.go  enter.go  viper.go
server/db/: enter.go  milvus.go  minio.go  postgre.go  rabbitmq.go  redis.go
server/middleware/: enter.go  error.go  logger.go  token.go
web/: .env.example  .gitignore  .prettierrc.json  README.md  eslint.config.js  eslint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
(+274 files in other folders)
